--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,7 @@ before_install:
   - sudo apt-get install check
 
 before_script:  
-    - mkdir build
-    - cd build
-    - cmake ..
+    - cmake .
 
 script: make 
 
