--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
 script: 
   - make 
   - make test
+  - lcov --directory . --capture --output-file coverage.info
 
 after_success:
   - bash <(curl -s https://codecov.io/bash)
